Change blog ost link

--- a/_posts/2015-01-15-untitled.md
+++ b/_posts/2015-01-15-untitled.md
@@ -5,7 +5,7 @@ subtitle: "What you are looking at and how it was built."
 date:   2015-01-15
 categories: jekyll update
 image: "../../images/write.jpg"
-permalink: "/blog/a-whole-new-world"
+permalink: "/blog/whats-behind-the-curtains"
 shortUrl: "http://bit.ly/1xVMGAr"
 tags: ["Jekyll", "Technology"]
 ---
